XMLtoCSV/objects/unpackaged/objects/Expense_Header_vod__c.object
<CustomObject>
    <description>Aggregates details of an expense line, such as the payee, the person who incurred the expense, and the payment status. Represents an invoice.</description>
    <fields>
        <fullName>Actual_vod__c</fullName>
        <description>Actual Expense.</description>
        <label>Actual</label>
        <summarizedField>Expense_Line_vod__c.Actual_vod__c</summarizedField>
        <summaryForeignKey>Expense_Line_vod__c.Expense_Header_vod__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Committed_vod__c</fullName>
        <description>Committed expense.</description>
        <label>Committed</label>
        <summarizedField>Expense_Line_vod__c.Committed_vod__c</summarizedField>
        <summaryForeignKey>Expense_Line_vod__c.Expense_Header_vod__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The country that the expense is associated with.</description>
        <label>Country</label>
        <referenceTo>Country_vod__c</referenceTo>
        <relationshipLabel>Expense Headers</relationshipLabel>
        <relationshipName>Expense_Header_Country_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Canceled_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked automatically if the associated event is canceled.</description>
        <label>Event Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event that the expense is associated with.</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Expense Headers</relationshipLabel>
        <relationshipName>Expense_Header_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>ID of the Expense Header</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that incurred an expense.</description>
        <label>Incurred Expense (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Expense Headers (Incurred Expenses)</relationshipLabel>
        <relationshipName>Incurred_Expense_Account_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Attendee_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The attendee that incurred an expense</description>
        <label>Incurred Expense (Attendee)</label>
        <referenceTo>EM_Attendee_vod__c</referenceTo>
        <relationshipLabel>Expense Headers (Incurred Expenses)</relationshipLabel>
        <relationshipName>Incurred_Expense_Attendee_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Speaker_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The speaker that incurred an expense</description>
        <label>Incurred Expense (Speaker)</label>
        <referenceTo>EM_Event_Speaker_vod__c</referenceTo>
        <relationshipLabel>Expense Headers (Incurred Expenses)</relationshipLabel>
        <relationshipName>Incurred_Expense_Speaker_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Team_Member_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The team member that incurred an expense</description>
        <label>Incurred Expense (Team Member)</label>
        <referenceTo>EM_Event_Team_Member_vod__c</referenceTo>
        <relationshipLabel>Expense Headers (Incurred Expenses)</relationshipLabel>
        <relationshipName>Incurred_Expense_Team_Member_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Vendor_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The vendor that incurred an expense</description>
        <label>Incurred Expense (Vendor)</label>
        <referenceTo>EM_Vendor_vod__c</referenceTo>
        <relationshipLabel>Expense Headers (Incurred Expenses)</relationshipLabel>
        <relationshipName>Incurred_Expense_Vendor_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Venue_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The venue that incurred an expense</description>
        <label>Incurred Expense (Venue)</label>
        <referenceTo>EM_Venue_vod__c</referenceTo>
        <relationshipLabel>Expense Headers (Incurred Expenses)</relationshipLabel>
        <relationshipName>Incurred_Expense_Venue_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_vod__c</fullName>
        <description>The entity that incurred the expense</description>
        <label>Incurred Expense</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payee_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that was paid.</description>
        <label>Payee (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Expense Headers (Payee)</relationshipLabel>
        <relationshipName>Payee_Account_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_Attendee_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The attendee that was paid</description>
        <label>Payee (Attendee)</label>
        <referenceTo>EM_Attendee_vod__c</referenceTo>
        <relationshipLabel>Expense Headers (Payee)</relationshipLabel>
        <relationshipName>Payee_Attendee_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_Speaker_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The speaker that was paid</description>
        <label>Payee (Speaker)</label>
        <referenceTo>EM_Event_Speaker_vod__c</referenceTo>
        <relationshipLabel>Expense Headers (Payee)</relationshipLabel>
        <relationshipName>Payee_Speaker_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_Team_Member_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The team member that was paid.</description>
        <label>Payee (Team Member)</label>
        <referenceTo>EM_Event_Team_Member_vod__c</referenceTo>
        <relationshipLabel>Expense Headers (Payee)</relationshipLabel>
        <relationshipName>Payee_Team_Member_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_Vendor_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The vendor that was paid.</description>
        <label>Payee (Vendor)</label>
        <referenceTo>EM_Vendor_vod__c</referenceTo>
        <relationshipLabel>Expense Headers (Payee)</relationshipLabel>
        <relationshipName>Payee_Vendor_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_Venue_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The venue that was paid.</description>
        <label>Payee (Venue)</label>
        <referenceTo>EM_Venue_vod__c</referenceTo>
        <relationshipLabel>Expense Headers (Payee)</relationshipLabel>
        <relationshipName>Payee_Venue_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_vod__c</fullName>
        <description>The entity that was paid</description>
        <label>Payee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date_vod__c</fullName>
        <description>Date the payment was made.</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date_vod__c</fullName>
        <description>Date the payment is due</description>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Split_Lines_vod__c</fullName>
        <description>Determines if an expense header contains split expense lines or not. If yes, the incurred expense parties are set on the expense lines, rather than the expense header.</description>
        <label>Split Lines?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of payment</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unpaid_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid_in_Full_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial_Payment_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Expense Header</label>
    <nameField>
        <displayFormat>EH-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Headers</pluralLabel>
    <recordTypes>
        <fullName>Event_Expense_Header_vod</fullName>
        <active>true</active>
        <description>Event Expense Header</description>
        <label>Event_Expense_Header_vod</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Event_Team_Member_vod__c</fullName>
        <label>Event Team Member</label>
    </sharingReasons>
</CustomObject>